# GST_Streamlit

./: README.md  app.py  main.py  pyproject.toml  requirements.txt  streamlit.py
.streamlit/: config.toml
data/vectorstore/: index_meta.json
data/vectorstore/a185d1aa-f1b5-44d0-a514-a62134cba548/: index_metadata.pickle
src/: chunking.py  chunking_new.py  data_loader.py  search_retreiver.py  vectorstore.py
static/: app.js
templates/: chunking_new.py  index.html
